[package]
name = "lwnsim-api-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_socketio = "0.4.0"
serde = "1.0"
serde_json = "1.0"
chrono= "0.4"
log= "0.4.16"
env_logger="0.10"
lazy_static="1.4"
anyhow="1.0"
ctrlc="3.2"
typetag="0.2"